[tool.poetry]
name = "unkey"
version = "0.1.0"
description = "An asynchronous Python SDK for unkey.dev."
authors = ["Jonxslays"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = ">3.8.1"
attrs = ">=22"

[tool.poetry.group.dev.dependencies]
black = "==23.3.0"
coverage = "==7.2.7"
flake8 = { version = "==6.0.0", python = ">=3.8.1" }
griffe = ">=0.28.2"
isort = "==5.12.0"
len8 = { version = "==0.7.3.post0", python = "<3.12" }
mike = "==1.1.2"
mkdocs-include-markdown-plugin = { version = "==4.0.4", python = "<3.12" }
mkdocs-material = "==9.1.16"
mkdocstrings = { version = "==0.22.0", extras = ["python"] }
mypy = "==1.4.0"
nox = "==2023.4.22"
pyright = "==1.1.315"
pytest = "==7.3.2"
pytest-asyncio = "==0.21.0"
pytest-testdox = "==3.0.1"
types-toml = "==0.10.8.6"
toml = "==0.10.2"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true

[tool.len8]
include = ["noxfile.py", "tests", "unkey"]
code-length = 99
docs-length = 80
strict = true

[tool.mypy]
packages = ["unkey"]
strict = true

[tool.pyright]
include = ["unkey"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
