[tool.poetry]
name = "unkey.py"
version = "0.4.0"
description = "An asynchronous Python SDK for unkey.dev."
authors = ["Jonxslays"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/Jonxslays/unkey.py"
repository = "https://github.com/Jonxslays/unkey.py"
packages = [
    { include = "unkey" },
    { include = "unkey/py.typed" },
]
classifiers = [
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
unkeypy = "unkey.__main__:_main"

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = ">3.8.1"
attrs = ">=22"

[tool.poetry.group.dev.dependencies]
black = "==23.7.0"
coverage = "==7.2.7"
flake8 = { version = "==6.0.0", python = ">=3.8.1" }
griffe = ">=0.28.2"
isort = "==5.12.0"
len8 = { version = "==0.7.3.post0", python = "<3.12" }
mike = "==1.1.2"
mkdocs-include-markdown-plugin = { version = "==4.0.4", python = "<3.12" }
mkdocs-material = "==9.1.18"
mkdocstrings = { version = "==0.22.0", extras = ["python"] }
mypy = "==1.4.1"
nox = "==2023.4.22"
pyright = "==1.1.317"
pytest = "==7.4.0"
pytest-asyncio = "==0.21.1"
pytest-testdox = "==3.0.1"
types-toml = "==0.10.8.6"
toml = "==0.10.2"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true

[tool.len8]
include = ["noxfile.py", "tests", "unkey"]
code-length = 99
docs-length = 80
strict = true

[tool.mypy]
packages = ["unkey"]
strict = true

[tool.pyright]
include = ["unkey"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
